TBD - 1.8.7
- Bugfix: Removed the hamlib test from the KLog start that was causing big delays.

Jan 2022 - 1.8.6
- Bugfix: Net rig & FLRig hamlib connections were not working propertly. (Closes #339) (TNX W5PNY)
- Bugfix: Some prefixes were not properly detected. (Closes #371) (Closes #367).
- Bugfix: Serial Hamlib rigs were not properly working. (TNX W5PNY)
- Bugfix: QRZ.com was disabled if user was not subscribed. (TNX EA5WA)
- Bugfix: QRZ.com data was not updated if the boxes were already filled. (TNX EA5WA)
- Bugfix: Callsigns formet were not always properly checked.
- Improvement: Hamlib 4.4 in binary packages (macOS & Windows) tested also in Linux.
- Improvement: RTS & DTR are defined to OFF by default in hamlib.
- Improvement:KLog differenciates QRZ.com subcribed users from non subscribed. (TNX EA5WA)

Oct 2021 - 1.8.5
- Bugfix: Station callsign was not shown on window title. (Closes #347)
- Bugfix: Received QSOs from LoTW were shown as to be sent. (Closes #358)
- Bugfix: Log was not properly ordered. (Closes #346) (TNX EA5WA)
- Improvement: Message of the mainwindow has been updated. (Closes #361)
- Improvement: Logs to be uploaded to LoTW are only shown from the current log. (Closes #362)
- Improvement: Logs to be uploaded to ClubLog are only shown from the current log. (Closes #363)
- New feature: It is now possible to enable/disable the callsign check. (Closes #186)
- Removed dead & commented code.
- Improved how mainCallsign & Station callsigns are used.
- QRZ.com queries are disabled if QRZ.com returns a non-subscribed user answer.

Aug 2021 - 1.8.4
- Bugfix: In some situations callsigns were always shown as to be worked. (Closes #345)
- Bugfix: Double click on DXCC widget was not sending the DXCC QSOs to the search widget.
- Bugfix: Queued LoTW  were not properly selected for upload. (Closes #354) (TNX EA5WA)
- Improvement: KLog start is optimized.

Aug 2021 - 1.8.3
- Added some backport code so systems without Qt 5.15.2 can compile and use KLog.