@@ -1,5 +1,6 @@
 TBD - 1.8.7
 - Bugfix: Removed the hamlib test from the KLog start that was causing big delays.
+- Bugfix: Serial speed was not saved to config file.
 
 Jan 2022 - 1.8.6
 - Bugfix: Net rig & FLRig hamlib connections were not working propertly. (Closes #339) (TNX W5PNY)
